plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.3'
    id 'io.spring.dependency-management' version '1.1.3'
    id 'jacoco'
}

group = 'com.softuni'

java {
    sourceCompatibility = '17'
}

jacoco {
    toolVersion = "0.8.10"
}

jacocoTestReport {
    reports {
        xml.required = true
        html.required = true
    }

    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                    'com/softuni/fitlaunch/service/MealService.class',
                    'com/softuni/fitlaunch/service/EmailService.class',
                    'com/softuni/fitlaunch/service/FitLaunchUserDetailsService.class',
                    'com/softuni/fitlaunch/service/CustomUserDetails.class',
                    'com/softuni/fitlaunch/web/rest/ForumController.class',
                    'com/softuni/fitlaunch/model',
                    'com/softuni/fitlaunch/interceptor',
                    'com/softuni/fitlaunch/validation/validators',
            ])
        }))
    }
}


repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
    implementation 'org.modelmapper:modelmapper:3.1.1'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation group: 'com.mysql', name: 'mysql-connector-j', version: '9.0.0'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.17.1'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation group: 'org.mockito', name: 'mockito-core', version: '2.1.0'
    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'
    implementation group: 'com.cloudinary', name: 'cloudinary-core', version: '1.38.0'
    implementation group: 'com.cloudinary', name: 'cloudinary-http44', version: '1.38.0'
    testImplementation group: 'org.springframework.security', name: 'spring-security-test', version: '6.3.1'
}

tasks.named('test') {
    useJUnitPlatform()
}



